# LibraryManagement

./: CMakeLists.txt  README.md  main.cpp
data/: books.txt  users.txt
include/: Auth.h  Book.h  Library.h  User.h
src/: Auth.cpp  Book.cpp  Library.cpp  User.cpp
